force-app/main/default/objects/Event_Service__c/Event_Service__c.object-meta.xml
<CustomObject>
    <description>Event opportunities and delivery records managed by the DUNEX Events division.</description>
    <label>Event Service</label>
    <nameField>
        <displayFormat>ES-{0000}</displayFormat>
        <label>Event Service Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>