force-app/main/default/objects/Event_Service__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Event Services</relationshipLabel>
    <relationshipName>EventServices</relationshipName>
    <type>Lookup</type>
</CustomField>