force-app/main/default/objects/Event_Service__c/fields/Estimated_Budget__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Budget__c</fullName>
    <label>Estimated Budget</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>