force-app/main/default/objects/Event_Service__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Venue Rental</fullName>
                <default>true</default>
                <label>Venue Rental</label>
            </value>
            <value>
                <fullName>Private Showcase</fullName>
            </value>
            <value>
                <fullName>Brand Activation</fullName>
            </value>
            <value>
                <fullName>Community Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>